tests/ui/expr/if/if-branch-types.stderr
error[E0308]: `if` and `else` have incompatible types
  --> $DIR/if-branch-types.rs:2:38
   |
LL |     let x = if true { 10i32 } else { 10u32 };
   |                       -----          ^^^^^ expected `i32`, found `u32`
   |                       |
   |                       expected because of this
   |
help: change the type of the numeric literal from `u32` to `i32`
   |
LL -     let x = if true { 10i32 } else { 10u32 };
LL +     let x = if true { 10i32 } else { 10i32 };
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
